random word generation complete, check logcat for generated word after pressing reset button.

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -45,7 +45,11 @@
         android:id="@+id/gameFragment"
         android:name="edu.quinnipiac.ser210.wordcrunch.GameFragment"
         android:label="fragment_game"
-        tools:layout="@layout/fragment_game" />
+        tools:layout="@layout/fragment_game" >
+        <action
+            android:id="@+id/action_gameFragment_self"
+            app:destination="@id/gameFragment" />
+    </fragment>
     <fragment
         android:id="@+id/howToFragment"
         android:name="edu.quinnipiac.ser210.wordcrunch.HowToFragment"
