--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -24,7 +24,7 @@
         android:layout_marginTop="100dp"
         android:text="What is the missing letter?"
         android:textAlignment="center"
-        android:textSize="36sp"
+        android:textSize="36dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_marginTop="32dp"
         android:text="SP_CE"
         android:textAlignment="center"
-        android:textSize="50sp"
+        android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView10" />
@@ -60,7 +60,7 @@
         android:layout_marginTop="23dp"
         android:text="M F A"
         android:textAlignment="center"
-        android:textSize="50sp"
+        android:textSize="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/missing_letter" />
